[tool.poetry]
name = "sp3.dev"
version = "1.1.0"
description = "speg03 portal site"
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
