[tool.poetry]
name = "portal"
version = "1.1.1"
description = "speg03 portal site"
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
mkdocs-material = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
