[tool.poetry]
name = "portal"
version = "1.1.1"
description = "speg03 portal site"
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "*"
mkdocs-material = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
